# LogAgent

./: CMakeLists.txt  README.md
src/: main.cpp
src/Aggregation/: AggregationOperation.hpp  ErrorCountByModuleAggregation.hpp  MostFrequentErrorAggregation.hpp
src/Command/: AnalyticsCommand.hpp  Command.hpp  CommandFactory.hpp  ExitCommand.hpp  HelpCommand.hpp  LoadFromFileCommand.hpp  QueryCommand.cpp  QueryCommand.hpp  ReportCommand.hpp
src/Criteria/: AndCriteria.hpp  Criteria.hpp  LogLevelCriteria.hpp  LogMethodCriteria.hpp  LogModuleCriteria.hpp  OrCriteria.hpp
src/Model/: AnalyticsLevel.hpp  Log.cpp  Log.hpp  LogLevel.hpp
src/Repository/: DBRepository.hpp  FileRepository.cpp  FileRepository.hpp  InMemoryRepository.cpp  InMemoryRepository.hpp  LogRepository.hpp
test/: test.txt
